# KickTheDollWebBot

./: .env.example  Dockerfile  README.md  alembic.ini  compose.yaml  main.py  pyproject.toml  requirements.tx  requirements.txt
app/: __main__.py  config.py  lottery.py  request_models.py  tech.py
app/api/: __init__.py  jwt.py
app/api/middlewares/: auth.py  tech.py
app/api/routes/: blackjack.py  dice.py  game.py  guess.py  lottery.py  misc.py  player.py  transaction.py  wallet.py
app/assets/: index.html
app/core/: blackjack.py  predictor.py
app/database/: database.py  models.py
app/db/: actions.py  models.py
app/domain/: games.py  user.py
app/middlewares/: auth.py  tech.py
app/services/: telegram.py  ton.py
app/telegram_bot/: __init__.py
app/telegram_bot/handlers/: __init__.py  balances.py  history.py  lottery.py  main.py  referrals.py  tech.py  users.py
app/telegram_bot/keyboards/: __init__.py  balance.py  (+2 more)
app/utils/: __init__.py  calculate_hand_value.py  predictor.py
backend/: config.py
backend/api/: __init__.py  jwt.py
backend/db/: actions.py  models.py  session.py
backend/domain/: games.py  transactions.py
backend/services/: telegram.py  ton.py
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: .prettierrc  App.css  App.tsx  images.d.ts  main.tsx
migrations/: env.py
migrations/versions/: 3d1311e7c0b0_initial_migration.py  c859c56012aa_refresh_tokens.py
tgbot/: __init__.py
tgbot/handlers/: balances.py  history.py  lottery.py  main.py  referrals.py  tech.py  users.py
tgbot/keyboards/: ref.py  tech.py
(+85 files in other folders)
